--- a/src/styles/common.module.css
+++ b/src/styles/common.module.css
@@ -21,3 +21,13 @@
   -webkit-animation: zoom 50s; /* Chrome, Safari, Opera */
   animation: zoom 50s;
 }
+
+.mainImage {
+  position: absolute;
+  opacity: 0.8;
+  object-fit: cover;
+  filter: brightness(30%);
+  -webkit-animation: zoom 50s; /* Chrome, Safari, Opera */
+  animation: zoom 50s;
+  z-index: -1;
+}
