--- a/src/styles/common.module.css
+++ b/src/styles/common.module.css
@@ -27,3 +27,45 @@
 .imgGoodEatingDark::before {
   background-image: url('https://raw.githubusercontent.com/rocooliveira/nutricao-prevencao-cancer/master/public/good-eating-habits.jpg');
 }
+
+.footerOverlayMainWaves {
+  margin-top: -34px;
+  left: -180px !important;
+  background-color: #8ec038;
+}
+.footerOverlayBlackWaves {
+  background-color: #1a1f2c;
+}
+.footerOverlayMainWaves,
+.footerOverlayBlackWaves {
+  mask-size: 1000px;
+  -webkit-mask-size: 1000px;
+  height: 32px;
+  margin-top: -32px;
+  left: -600px;
+}
+
+.footerOverlayBlackWaves,
+.footerOverlayMainWaves {
+  display: block;
+  height: 64px;
+  z-index: 10;
+  pointer-events: none;
+  overflow: hidden;
+  margin-top: 0px;
+  mask-image: url('https://raw.githubusercontent.com/rocooliveira/nutricao-prevencao-cancer/master/public/wave.svg');
+  -webkit-mask-image: url('https://raw.githubusercontent.com/rocooliveira/nutricao-prevencao-cancer/master/public/wave.svg');
+  mask-size: 1940px;
+  -webkit-mask-size: 1940px;
+  position: absolute;
+  right: 0;
+}
+
+@media (max-width: 991px) {
+  .footerOverlayBlackWaves {
+    left: -650px;
+  }
+  .footerOverlayMainWaves {
+    left: -200px !important;
+  }
+}
