--- a/src/styles/common.module.css
+++ b/src/styles/common.module.css
@@ -104,3 +104,18 @@
   }
 
 }
+
+@media (min-width:1200px){
+  .customContainer{
+    width: 100%;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1140px;
+    background-color: #FFF;
+  }
+  .customContainer > header{
+    width: 100%;
+  }
+}
